Updates to TreeMap workflow

--- a/Aim2/code/Python/04GEE-GridMet.ipynb
+++ b/Aim2/code/Python/04GEE-GridMet.ipynb
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c9a3132f-9c2a-45d8-b85f-6ef42dc263a3",
    "metadata": {},
    "outputs": [
@@ -715,7 +715,56 @@
       "Waiting for export to finish..\n",
       "\tPatience young padawan.\n",
       "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n"
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Waiting for export to finish..\n",
+      "\tPatience young padawan.\n",
+      "Export completed successfully !!!!\n"
      ]
     }
    ],
