--- a/Aim2/code/Python/04a_TreeMap_FIA-Prep.ipynb
+++ b/Aim2/code/Python/04a_TreeMap_FIA-Prep.ipynb
@@ -193,10 +193,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "73a880c0-217b-48e6-86c9-b0ce3387e5af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape: (2, 28724, 17006); \n",
+      "GeoTransform: -1193295.0 30.0 0.0 2253345.0 0.0 -30.0; \n",
+      "WKT: EPSG:5070; \n",
+      "NoData Value: nan; \n",
+      "Data Type: float32\n",
+      "   tm_id  fortypcd\n",
+      "0  20038       268\n",
+      "1  20976       266\n",
+      "2  37567       367\n",
+      "Saved file to: /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/USFS/treemap_tmid_fortypcd_lookup.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the TreeMap (ca. 2016)\n",
     "# Pixel values here denote the FIA plot ID (\"tm_id\")\n",
@@ -236,61 +253,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "0ebe6a9c-9fe2-42cd-87b6-25108989cbae",
+   "execution_count": null,
+   "id": "d13a8e32-9c2d-463f-a03d-4f197bb3572b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # create the tm_id / FORTYPCD mapping\n",
-    "# t0 = time.time()\n",
+    "# create a forest/non-forest grid\n",
+    "forest_mask = xr.where(~np.isnan(tmid_da), 1, 0)\n",
     "\n",
-    "# # Reload the stack\n",
-    "# out_fp = os.path.join(projdir, \"data/spatial/mod/USFS/TreeMap_2016_TMID_FORTYPCD.tif\")\n",
-    "# stack_da = rxr.open_rasterio(out_fp, masked=True, cache=False).squeeze()\n",
-    "# print(f\"Stack shape: {stack_da.shape}\")\n",
-    "# print(type(stack_da))\n",
-    "# print(stack_da.sel(band=1).rio.nodata)\n",
+    "# Save as a GeoTIFF\n",
+    "out_fp = os.path.join(projdir, \"data/spatial/mod/USFS/TreeMap_2016_forestmask.tif\")\n",
+    "forest_mask.rio.to_raster(out_fp, compress='zstd', zstd_level=9, dtype='uint16', driver='GTiff')\n",
+    "print(f\"Saved multi-band raster to: {out_fp}\")\n",
     "\n",
-    "# # Create a DataFrame for pixel-level mapping\n",
-    "# tmid_vals = stack_da.sel(band=1).values.flatten()\n",
-    "# fortypcd_vals = stack_da.sel(band=2).values.flatten()\n",
-    "# pixel_mapping = pd.DataFrame({\n",
-    "#     'tm_id': tmid_vals,\n",
-    "#     'fortypcd': fortypcd_vals\n",
-    "# })\n",
-    "# print(len(pixel_mapping[pixel_mapping['tm_id'] == 69728.0]))\n",
+    "# calculate the total grid pixels\n",
+    "# see __functions.py 'compute_band_stats'\n",
+    "forest_pct = compute_band_stats(grid, forest_mask, 'grid_index', attr='constant')\n",
+    "forest_pct.rename(columns={\n",
+    "    'pct_cover': 'forest_pct',\n",
+    "    'total_pixels': 'forest_pixels'\n",
+    "}, inplace=True)\n",
+    "forest_pct = forest_pct[forest_pct['constant'] == 1] # just forest pixels\n",
+    "forest_pct = forest_pct[['grid_index','forest_pixels','forest_pct']]\n",
     "\n",
-    "# pixel_mapping = pixel_mapping.drop_duplicates() # keep the lookup values\n",
-    "# pixel_mapping['tm_id'] = pixel_mapping['tm_id'].astype(int)\n",
-    "# pixel_mapping['fortypcd'] = pixel_mapping['fortypcd'].astype(int)\n",
-    "# print(f\"\\nPixel mapping:\\n{pixel_mapping.head()}\")\n",
+    "# how many forested grids are there? (>50%)\n",
+    "n_forest = len(forest_pct[forest_pct['forest_pct'] > 50])\n",
+    "print(f\"\\n[{round(n_forest/len(grid)*100,2)}%] predominantly forest grids.\")\n",
+    "print(f\"\\n{forest_pct.head(3)}\")\n",
     "\n",
-    "# # save this file out.\n",
-    "# out_fp = os.path.join(projdir,'data/spatial/mod/USFS/treemap_tmid_fortypcd_lookup.csv')\n",
-    "# pixel_mapping.to_csv(out_fp)\n",
-    "# print(f\"Saved file to: {out_fp}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "a8a322b4-a028-4024-ba22-812346a524d5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# del stack_da, tmid_vals, fortypcd_vals, pixel_mapping\n",
-    "# gc.collect()"
+    "del forest_mask\n",
+    "gc.collect() # clean up"
    ]
   }
  ],
